Fix description spacing

--- a/client/src/components/Modals/ApprovePitch/styles.scss
+++ b/client/src/components/Modals/ApprovePitch/styles.scss
@@ -26,6 +26,10 @@
     margin-right: 10px;
   }
 
+  .description {
+    line-height: 1.7rem;
+  }
+
   .content {
     .pitch-author-section {
       margin-bottom: 1rem;
